language/move-lang/tests/move_check/borrows/freeze_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/freeze_field_invalid.move:12:9 ───
    │
 12 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    ·
 11 │         let f = &mut s.f;
    │                 -------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/freeze_field_invalid.move:19:9 ───
    │
 19 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    ·
 18 │         let g = &mut s.f;
    │                 -------- Field 'f' is still being mutably borrowed by this reference
    │

